# build-your-own-git

./: Makefile  README.md  course-definition.yml  starter-repository-definitions.yml
.github/workflows/: post-diffs-in-pr.yml  test-git-is-unavailable.yml  test.yml
compiled_starters/c/: CMakeLists.txt  README.md  your_program.sh
compiled_starters/c/src/: main.c
compiled_starters/clojure/: README.md
compiled_starters/clojure/.codecrafters/: run.sh
compiled_starters/cpp/: CMakeLists.txt  README.md  your_git.sh  your_program.sh
compiled_starters/cpp/src/: Server.cpp  main.cpp
compiled_starters/csharp/: .gitignore  README.md
compiled_starters/csharp/src/: Program.cs
compiled_starters/elixir/: README.md  codecrafters.yml  your_program.sh
compiled_starters/elixir/.codecrafters/: compile.sh
compiled_starters/elixir/lib/: main.ex
compiled_starters/git-starter-go/: go.mod  your_git.sh
compiled_starters/git-starter-go/app/: main.go
compiled_starters/git-starter-ruby/: README.md
compiled_starters/git-starter-rust/: Cargo.toml  README.md
compiled_starters/git-starter-rust/src/: main.rs
compiled_starters/git-starter-swift/: Package.swift  README.md
compiled_starters/go/: README.md  go.mod  your_git.sh  your_program.sh
compiled_starters/go/.codecrafters/: run.sh
compiled_starters/go/app/: main.go
compiled_starters/haskell/: .gitignore  README.md  codecrafters.yml  flake.nix  package.yaml  your_git.sh  your_program.sh
compiled_starters/java/: README.md  your_program.sh
compiled_starters/javascript/: README.md  your_program.sh
compiled_starters/kotlin/: README.md  pom.xml  your_git.sh  your_program.sh
compiled_starters/ocaml/: README.md  codecrafters_git.opam
compiled_starters/python/: README.md  your_program.sh
compiled_starters/ruby/: README.md  your_program.sh
compiled_starters/rust/: Cargo.toml  README.md
compiled_starters/rust/.codecrafters/: run.sh
compiled_starters/rust/src/: main.rs
compiled_starters/swift/: README.md
compiled_starters/typescript/: README.md  package.json  your_git.sh  your_program.sh
compiled_starters/zig/: .gitignore  README.md  your_program.sh
dockerfiles/: bun-1.1.Dockerfile  c-23.Dockerfile  clojure-1.12.0.Dockerfile  cpp-20.Dockerfile  cpp-23.Dockerfile  deno-1.42.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  elixir-1.17.Dockerfile  go-1.13.Dockerfile  go-1.16.Dockerfile  go-1.19.Dockerfile  go-1.21.Dockerfile  go-1.22.Dockerfile  go-1.24.Dockerfile  haskell-9.4.6.Dockerfile  haskell-9.4.Dockerfile  haskell-9.8.Dockerfile  java-21.Dockerfile  kotlin-1.3.72.Dockerfile  kotlin-1.4.Dockerfile  kotlin-1.9.Dockerfile  ocaml-5.4.Dockerfile  python-3.11.Dockerfile  python-3.12.Dockerfile  python-3.13.Dockerfile  python-3.14.Dockerfile  python-3.7.Dockerfile  python-3.8.Dockerfile  ruby-2.7.Dockerfile  ruby-3.2.Dockerfile  ruby-3.3.Dockerfile  rust-1.43.Dockerfile  rust-1.54.Dockerfile  rust-1.62.Dockerfile  rust-1.68.Dockerfile  rust-1.70.Dockerfile  rust-1.76.Dockerfile  rust-1.77.Dockerfile  rust-1.82.Dockerfile  (+4 more)
scripts/: check_git_is_unavailable.sh
solutions/c/01-gg4/code/: CMakeLists.txt  README.md
solutions/c/01-gg4/code/app/: main.c
solutions/c/init/: explanation.md
solutions/ocaml/01-gg4/code/: dune-project  your_program.sh
solutions/ocaml/01-gg4/code/src/: main.ml
solutions/rust/01-gg4/code/: Cargo.toml  README.md  your_program.sh
solutions/rust/01-gg4/code/.codecrafters/: compile.sh  run.sh
solutions/rust/01-gg4/code/src/: main.rs
solutions/rust/04-read_tree/code/: Cargo.toml
solutions/rust/04-read_tree/code/src/: cat_file.rs  cli.rs  ls_tree.rs  main.rs
solutions/rust/04-read_tree/code/src/object/: hash.rs  load.rs  mod.rs
solutions/swift/: explanation.md
stage_descriptions/: base-01-gg4.md  base-02-ic4.md  base-03-jt4.md  base-04-kp1.md  base-05-fe4.md  base-06-jm9.md  base-07-mg6.md
starter_templates/: README.md  codecrafters.yml
starter_templates/c/: config.yml
starter_templates/clojure/: config.yml
starter_templates/cpp/: CMakeLists.txt
starter_templates/csharp/: config.yml  your_git.sh
starter_templates/go/: config.yml  go.mod
starter_templates/haskell/: your_git.sh
starter_templates/java/: .gitignore  config.yml  your_git.sh
starter_templates/javascript/: your_git.sh
starter_templates/python/: config.yml
starter_templates/ruby/: config.yml
starter_templates/rust/: config.yml
starter_templates/swift/: your_git.sh
starter_templates/typescript/: deno.json  package.json  tsconfig.json  your_git.sh
starter_templates/zig/: build.zig
(+398 files in other folders)
