[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"                             # error handling
